# Msdesigner-api

./: .gitignore  README.md  playground.py  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml
src/Msdesigner/: create_images.py
src/microsoftdesigner/: __main__.py  constants.py  gen_images.py  logger.py  utils.py
src/msdesigner/: constants.py  gen_images.py  logger.py  utils.py
