[project]
name = "MicrosoftDesigner"
version = "0.0.7"
description = "High quality image generation by Microsoft Designer. Reverse engineered API."
authors = [
    {name = "imnotdev25",email = "85677268+imnotdev25@users.noreply.github.com"}
]
license = {text = "GNU General Public License v2.0"}
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
